# stock_flask

./: .replit  APPLICATION_PROMPT.md  DESKTOP-SETUP.md  PROJECT_PROMPT.md  README-Desktop.md  StockCeramique.spec  admin_tools.py  app.py  build-config.json  build-windows.bat  build_script.js  desktop-build.bat  desktop-build.sh  desktop-dev.bat  desktop-scripts.md  desktop_main.py  desktop_main_old.py  electron-builder.json  final-desktop-build.bat  fix-and-build.bat  flask_app.py  flask_models.py  import_articles.py  import_articles_batch.py  import_data.py  import_new_articles.py  import_suppliers.py  init_user.py  initialize_desktop_database.py  license_generator.py  license_manager.py  models.py  onetime_license_manager.py  package-desktop.json  package.json  pyproject.toml  quick-desktop-build.bat  quick-test-desktop.bat  replit.md  requirements-windows.txt  (+6 more)
attached_assets/: Pasted--C-Users-fikri-Desktop-stockflask-python-m-PyInstaller-onefile-noconsole-add-data-template-1756344880158_1756344880159.txt  Pasted--F-ADRESSE-F-TEL-F-FAX-F-EMAIL-F-ID-D-REMARQUE-F-A-D-S-INDUSTRIE-MAROC-0539714269-1-FERAILLE-SI-1756416297250_1756416297251.txt  Pasted--StockC-ramique-Enhancement-Recommendations-Strategic-Feature-Additions-1-Advanc-1755033802772_1755033802773.txt  Pasted--StockC-ramique-Enhancement-Recommendations-Strategic-Feature-Additions-1-Advanc-1755034018781_1755034018987.txt  Pasted--div-class-glass-card-rounded-2xl-p-6-mb-6-fade-in-div-class-flex-flex-col-md-flex-row--1756293966495_1756293966496.txt  (+23 more)
data/: .gitkeep  stockceramique.db
electron/: main.cjs
(+25 files in other folders)
