[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyinstaller>=6.15.0",
    "python-dotenv>=1.1.1",
    "pywebview>=6.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "weasyprint>=66.0",
    "werkzeug>=3.1.3",
]
